# FWAT-cube2sph

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.BAK  README.md  STATIONS_TA.A00_R  STATIONS_TA.A00_T  STATIONS_TA.A00_Z  cal_misfit.py  cal_misfit.sh  clean_files.sh  database.mod  fdafa.npy  genindex.html  index.html  module_env  objects.inv  parameters.sh  pyproject.toml  readme.md  requirements.txt  run_fwi.sh  run_fwi_sd.sh  run_joint.sh  run_lbfgs.local.sh  run_lbfgs.sh  run_lbfgs_joint.sh  sbash_forward.sh  sbash_fwat1_fwd_measure_adj.sh  sbash_fwat2_postproc_opt.sh  sbash_fwat3_linesearch.sh  sbash_fwat4_opt_model.sh  sbash_measure.sh  sbash_postproc_kl.sh  sbash_wolfe.sh  search.html  searchindex.js  test.cpp  test.py  wait.sh  (+1 more)
.doctrees/: environment.pickle  index.doctree
Cedar/: fwi_alter.sh  run_fwi.sh  sbash_forward.sh  sbash_fwat0_mesh.sh  sbash_fwat1_fwd_measure_adj.sh  sbash_fwat2_postproc_opt.sh  sbash_fwat3_linesearch.sh  sbash_fwat4_opt_model.sh
Cita/: pbs_forward.sh  pbs_fwat1_fwd_measure_adj.sh  pbs_fwat2_postproc_opt.sh  pbs_fwat3_linesearch.sh  pbs_fwat4_opt_model.sh  run_fwi.sh  submit_job_fwat_forward.sh  wait.sh  watch.sh
Nia/: clean_database.sh  copy_stf.sh  run_joint.sh  sbash_forward.sh  sbash_fwat1_fwd_measure_adj.sh  sbash_fwat2_postproc_opt.sh  sbash_fwat3_linesearch.sh  sbash_fwat4_opt_model.sh  step4_calmisfit.sh  submit_job_fwat_forward.sh  wait.sh
Tianhe/: cal_misfit.sh  checkpoint.sh  clean.sh  create_CMTSOLUTION.sh  fwi_only_noise.sh  fwi_only_tele.sh  realclean.sh  run_tele_and_noise.sh  sbash_forward.sh  sbash_fwat0_mesh.sh  sbash_fwat1_fwd_measure_adj.sh  sbash_fwat2_postproc_opt.sh  sbash_fwat3_linesearch.sh  sbash_fwat_forward.sh  submit_job_fwat1.sh  submit_job_fwat2.sh  submit_job_fwat3.sh  submit_job_fwat_forward.sh  synthetic.sh  synthetic_data.sh
bak/: sbash_fwat0_mesh.sh  sbash_fwat3_linesearch.sh  sbash_fwat4_opt_model.sh  sbash_resubmit_joint.sh  sbash_resubmit_ls.sh
code/: get_lbfgs_direction.f90  initialize_simulation.F90  param_reader.c
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
fwat/: clean.py
fwat_params/: FWAT.PAR.noise  FWAT.PAR.org.yaml  FWAT.PAR.rf  FWAT.PAR.rf.init  FWAT.PAR.rf.last  FWAT.PAR.tele  FWAT.PAR.yaml  MEASUREMENT.PAR  MEASUREMENT.PAR.noise  MEASUREMENT.PAR.noise.mt  MEASUREMENT.PAR.rf  MEASUREMENT.PAR.tele  fwat.org.yaml  fwat.yaml  fwat.yaml.org  lbfgs.init.yaml  lbfgs.org.yaml  lbfgs.yaml  lbfgs.yaml.org  slurm_template.narval
fwatlib/: change_par_file.sh  clean.sh  compile_all.sh  get_param.py  set_param.py
markdown/: cube2sph.html  fwat.html  install.html  tutorial.html  visual.html
measure_adj/: MEASUREMENT.PAR  Makefile  Makefile_ifort  window_chi  window_chi_sum
measure_adj_mpi/: MEASUREMENT.PAR  MEASUREMENT.WINDOWS  Makefile  Makefile_ifort  compile.sh  measure_adj.f90  measure_adj_mod.f90  measure_adj_mpi  measure_adj_mpi.f90  rotate_adj_src  sacio.f90  window_chi  window_chi_sum  window_index
nia/: checkpoint.sh  fwi_only_noise.sh  fwi_only_tele.sh  sbash_forward.sh  sbash_fwat0_mesh.sh  sbash_fwat1_fwd_measure_adj.sh  sbash_fwat2_postproc_opt.sh  sbash_fwat3_linesearch.sh  submit_job_fwat1.sh  submit_job_fwat2.sh  submit_job_fwat3.sh  submit_job_fwat_forward.sh  synthetic.sh  synthetic_data.sh
plot_model/: CMakeLists.txt  compile.sh  plot_slides.sh  step0_generate_grd.sh  step0_get_horiz_gmt.sh  step0_get_profile.sh  step0_get_vert_gmt.sh  step0_get_vert_gmt.sh.bak  step0_plot_profile_gmt.sh  step1_generate_profile.sh  step1_plot_profiles.sh  step2_topo.sh  step3_check_each_profile.sh
plot_model/bak/: compile.sh
plot_model/bak/src/: constants.mod  locate_points.f90  read_media3D_mpi.f90  read_media3D_mpi_linear.f90  utm_geo__genmod.f90
plot_model/grdfolder/: vs.iter00.profA.grd  vs.iter01.profA.grd  vs.iter02.profA.grd  vs.iter03.profA.grd  vs.iter04.profA.grd  vs.iter05.profA.grd  vs.iter06.profA.grd
plot_model/input/: profA.loc  profA.txt
plot_model/src/: generate_horiz.py  read_media3D.f90  read_media3D_mpi.f90
plot_model/src/interp3D/: CMakeLists.txt  constants.f90  gll_library.f90  interp3D_par.f90  locate_points_in_mesh.f90  media3D_IO.f90  prog_gen_slices.f90  prog_interp3D.f90  prog_serial.f90
plot_model/src/src/: read_media3D.f90
scripts/: module_env  parameters.sh  run_forward.sh  (+8 more)
(+263 files in other folders)
